<?xml version="1.0" encoding="UTF-8"?>
<!--
SPDX-FileCopyrightText: NOI Techpark <digital@noi.bz.it>

SPDX-License-Identifier: CC0-1.0
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.opendatahub.timeseries.bdp</groupId>
	<artifactId>core</artifactId>
	<packaging>pom</packaging>
	<!-- Make sure to update also .github/workflows + must correspond to project.properties.revision -->
	<version>9.0.0</version>
    <inceptionYear>2019</inceptionYear>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.1.4</version>
		<relativePath/>
		<!-- lookup parent from repository -->
	</parent>

	<properties>
		<!-- Make sure to update also .github/workflows + must correspond to project.version -->
		<revision>9.0.0</revision>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<java.version>17</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<dependency.locations.enabled>false</dependency.locations.enabled>
	</properties>

	<repositories>
		<repository>
			<id>maven-repo.opendatahub.com</id>
			<url>https://maven-repo.opendatahub.com/release</url>
		</repository>
	</repositories>

	<modules>
		<module>dto</module>
		<module>writer</module>
		<module>client</module>
	</modules>

	<dependencies>
		<!-- Logging -->
		<dependency>
			<groupId>net.logstash.logback</groupId>
			<artifactId>logstash-logback-encoder</artifactId>
			<version>7.4</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<extensions>
            <extension>
                <groupId>org.springframework.build</groupId>
                <artifactId>aws-maven</artifactId>
                <version>5.0.0.RELEASE</version>
            </extension>
        </extensions>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<dependencyLocationsEnabled>false</dependencyLocationsEnabled>
				</configuration>
			</plugin>
			<!--
				The maven-source-plugin can be used to generate a source code
				jar file for a project. Deploying this source jar to a remote
				repository can be useful for other developers so that they can
				'attach source' and debug into the project source code. Mainly
				useful for the client / dto libraries used in data
				collectors.
			-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>

	</build>

	<distributionManagement>
        <snapshotRepository>
            <id>maven-repo.opendatahub.com-snapshot</id>
            <name>Open Data Hub AWS S3 Snapshot Repository</name>
            <url>s3://it.bz.opendatahub/snapshot</url>
        </snapshotRepository>
        <repository>
            <id>maven-repo.opendatahub.com-release</id>
            <name>Open Data Hub AWS S3 Release Repository</name>
            <url>s3://it.bz.opendatahub/release</url>
        </repository>
    </distributionManagement>

</project>
